add aggregate stats on /api/v1/stats
